# Computer-graphics

./: .gitmodules  CMakeLists.txt  README.md
lab 2/: CMakeLists.txt
lab 2/resources/: shader.vs
lab 2/src/: DrawFuntions.h  ShaderProgram.h  Window.cpp  Window.h  main.cpp
lab 3/: CMakeLists.txt
lab 3/resources/: shader.fs  shader.vs
lab 3/src/: Camera.cpp  Camera.h  TextRenderer.h  Window.cpp  Window.h  main.cpp
lab 4/: CMakeLists.txt
lab 4/resources/: text.vs
lab 4/src/: TextRenderer.h  Window.cpp  Window.h  main.cpp
resources/: shader.fs  text.fs  text.vs
src/: DrawFuntions.h  ShaderProgram.cpp  main.cpp
